# tba3

./: LICENSE.md  README.md  tba3-spec.yml
mock-server/: .openapi-generator-ignore  README.md  pyproject.toml  server.py  tba3-spec.yml
mock-server/.openapi-generator/: FILES
mock-server/api/: main.py  security_api.py
mock-server/api/apis/: groups_api.py  groups_api_base.py  schools_api.py  schools_api_base.py  states_api.py  states_api_base.py
mock-server/api/impl/: groups_api_impl.py  schools_api_impl.py  shared.py  states_api_impl.py  transform_group.py  transform_helpers.py  transform_school.py  transform_state.py  transform_student.py
mock-server/api/models/: aggregation.py  aggregations_inner.py  aggregations_inner_all_of_aggregations_inner.py  characteristic.py  comparison_inner.py  competence.py  competence_level.py  competence_level_descriptive_statistics.py  competence_level_descriptive_statistics_descriptive_statistics.py  competence_level_statistics_inner.py  competence_levels_inner.py  descriptive_statistics.py  descriptive_statistics_descriptive_statistics.py  domain.py  domain_subject.py  exercise.py  gender_characteristic.py  inline_object_inner.py  inline_object_inner1.py  inline_object_inner2.py  inline_object_inner2_all_of_aggregations_inner.py  inline_object_inner_all_of_competence_levels_inner.py  item.py  items_inner.py  (+8 more)
mock-server/config/: equivalence_tables.yml  groups.yml  schools.yml  states.yml
mock-server/generator/: __init__.py  booklet_registry.py  booklets.py  config.py  core.py  loader.py  profiles.py  responses.py  students.py
(+55 files in other folders)
