[project]
name = "tba-3-mock-server"
version = "0.1.0"
description = "Mock-API-Server für die TBA3-Spezifikation (VERA-Auswertungsschnittstelle)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.2",
    "numpy>=2.3.5",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = ["."]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["api.models.*", "api.apis.*", "api.security_api"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
